syntax = "proto3";

package protofile;
option go_package ="/protofile";

message User{
    string name =1;
    string email =2;
    int64 phone =3;
    
}
message Activity {
    string activitytype = 1;
    string timestamp = 2;
    int32 duration = 3;
    string label = 4;
    string email = 5;
}

message UserRequest{
    User user=1; 
}

message UserResponse{
    string Result=1;
}
message ActRequest{
    Activity activity=1; 
}

message ActResponse{
    string Result=1;
}

message GetUserRequest {
    string email = 1;
}

message GetUserResponse {
    bool status = 1;
    User user = 2;
}

message GetActivityRequest {
    string email = 1;
}

message GetActivityResponse {
    bool status = 1;
    Activity activity = 2;
}
message RemoveUserRequest {
    string email = 1;
}

message RemoveUserResponse {
    string result = 1;
}
service UserService{
    rpc UserData(UserRequest) returns (UserResponse){};
    rpc ActData(ActRequest) returns (ActResponse) {};
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {};
    rpc GetActivity(GetActivityRequest) returns (GetActivityResponse) {};
    rpc RemoveUser(RemoveUserRequest) returns (RemoveUserResponse) {};
}

